# resvg_cpp_rust

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_build_ios.sh  cmake_install.cmake  libresvg.h  main.cpp  make.sh  make_ios.sh  make_macos.sh  resvg  resvg.pc  resvg.pc.in
essai/: CMakeLists.txt  compile_essai.sh  essai.cpp  make_essai_macos.sh
include/: helloworld.h
lib/: CMakeLists.txt
lib/include/src/: helloworld.cpp  helloworld.h
rust/resvg/: Cargo.toml  make.sh
rust/resvg/src/: lib.rs
src/: helloworld.cpp
