cmake_minimum_required(VERSION 3.22)
project(essai)

set(CMAKE_CXX_STANDARD 20)

option(WITH_IOS "Option description" OFF)
option(WITH_MACOS "Option description" ON)

add_definitions(-Wall)
set(DEBUG)
if (DEFINED DEBUG)
    add_definitions(-g)
endif()
if (DEFINED RELEASE)
    add_definitions(-O3)
endif()

IF (WITH_IOS)
    #SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -arch armv7")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -arch armv7")
    set(CMAKE_CXX_FLAGS "-fobjc-abi-version=2 -fobjc-arc ${CMAKE_CXX_FLAGS}")
endif()

include_directories(../include)
file(GLOB SOURCES "*.cpp")
add_executable(essai essai.cpp)
TARGET_LINK_LIBRARIES(essai ${CMAKE_SOURCE_DIR}/../build/libresvg.a)
IF (WITH_IOS)
    TARGET_LINK_LIBRARIES(essai ${CMAKE_SOURCE_DIR}/../rust/libresvgIos.a)
endif()
IF (WITH_MACOS)
    TARGET_LINK_LIBRARIES(essai ${CMAKE_SOURCE_DIR}/../rust/libresvg.a)
endif()